crates/vise/tests/ui/labels/bogus_label_name_in_field.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/labels/bogus_label_name_in_field.rs:6:5
  |
6 |     код: u16,
  |     ^^^ the evaluated program panicked at 'name contains non-ASCII chars', $DIR/tests/ui/labels/bogus_label_name_in_field.rs:6:5
